--- a/style.css
+++ b/style.css
@@ -9,5 +9,20 @@ body {
 }
 
 h1 {
+    margin-top: 0;
+    text-decoration: underline;
     font-size: 2em;
+}
+
+.container {
+    margin: auto;
+    width: 300px;
+    background-color: seashell;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+#current-time {
+    letter-spacing: 1px;
+    font-size: 3em;
 }
