--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-* {
-    font-family: 'abril fatface';
-    text-align: center;
-    color: #2b2b2b;
-}
+
 
 body {
     background-color: ivory;
@@ -10,19 +6,38 @@ body {
 
 h1 {
     margin-top: 0;
+    font-family: 'abril fatface', Helvetica, Arial, sans-serif;
+    text-align: center;
+    color: red;
     text-decoration: underline;
     font-size: 2em;
+    text-shadow: 3px 2px 2px black;
+}
+
+h2 {
+        font-family: 'abril fatface', Helvetica, Arial, sans-serif;
 }
 
 .container {
+    padding-bottom: 10px;
+    text-align: center;
+    color: #2b2b2b;
     margin: auto;
-    width: 300px;
+    width: 350px;
     background-color: seashell;
     border: 1px solid black;
     border-radius: 10px;
 }
 
+#todays-date {
+        font-family: 'Work Sans', Helvetica, Arial, sans-serif;
+        font-weight: 500;
+        font-size: 1.5em;
+}
+
 #current-time {
+    font-family: 'Work Sans', Helvetica, Arial, sans-serif;
+    font-weight: 500;
     letter-spacing: 1px;
-    font-size: 3em;
+    font-size: 2em;
 }
